# skill-demo

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt  run_web.py
app/: __init__.py  agent_vuln.py  auth.py  callbacks.py  config.py  db.py  llm_config.py  models.py  run.py  web.py
app/skills/: README.md  __init__.py
app/skills/ping-check/: SKILL.md
app/skills/scan-report/: SKILL.md
app/skills/scan-report/scripts/: generate_template.py
app/skills/web_basic_scan/: SKILL.md
app/skills/web_basic_scan/scripts/: checklist.py
app/storage/: __init__.py  backend.py  context_manager.py  storage_manage.py
app/tools/: __init__.py  http_get.py  port_scan.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AuthDialogs.tsx  MessageInput.tsx  MessageList.tsx  SettingsPanel.tsx  Sidebar.tsx  SkillList.tsx
